Fixed navbar flickering issue in mobile device.

--- a/src/components/Navbar/NavMenuGroup/NavMenuGroup.scss
+++ b/src/components/Navbar/NavMenuGroup/NavMenuGroup.scss
@@ -8,12 +8,11 @@
   z-index: 200;
   left: 0px;
   top: 0px;
-  height: 90vh;
   display: flex;
   flex-direction: column;
   gap: 30px;
   width: 250px;
-  height: 80%;
+  height: 100%;
   overflow-y: auto;
   background-color: rgba($color: #0b1928, $alpha: 1);
   button {
