--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,8 +6,8 @@
   padding: 9px 160px;
   background-color: var(--scolor);
   // flex-wrap: wrap;
-  gap: 8px;
   position: relative;
+  gap: 10px;
 
   .nav-menu {
     align-self: center;
@@ -24,6 +24,8 @@
 
     .nav-menu {
       display: none;
+      // visibility: hidden;
+      opacity: 0;
     }
 
     .hamburger-icon-div {
@@ -53,8 +55,6 @@
       flex-direction: column;
       justify-content: center;
       align-items: flex-end;
-
-      // gap: 8px;
     }
   }
 }
